--- a/CryptoMessage/Base.lproj/Main.storyboard
+++ b/CryptoMessage/Base.lproj/Main.storyboard
@@ -13,7 +13,7 @@
         <!--retour-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="SignInVCViewController" customModule="test" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="SignInVCViewController" customModule="CryptoMessage" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -40,27 +40,6 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="OU" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Aw-x7-Epw">
-                                <rect key="frame" x="125" y="321" width="124" height="18"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="124" id="Wa4-pb-zCm"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3jt-8w-5lh">
-                                <rect key="frame" x="130" y="376" width="114" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="Boo-yq-i1V"/>
-                                    <constraint firstAttribute="width" constant="114" id="Te3-9U-DXc"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
-                                <state key="normal" title="S'inscrire"/>
-                                <connections>
-                                    <segue destination="BKO-EM-q2S" kind="show" id="4tb-ti-K5V"/>
-                                </connections>
-                            </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="SJh-dg-OXd">
                                 <rect key="frame" x="116" y="255" width="164" height="30"/>
                                 <constraints>
@@ -70,26 +49,57 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mHf-MQ-e3Z">
+                                <rect key="frame" x="130" y="313" width="114" height="35"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                <state key="normal" title="Se connecter"/>
+                                <connections>
+                                    <action selector="login:" destination="BYZ-38-t0r" eventType="touchUpInside" id="U9t-Yg-IW9"/>
+                                    <segue destination="a2z-mo-yqq" kind="show" identifier="ContactsSegue" id="Sn3-up-EUN"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="OU" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Aw-x7-Epw">
+                                <rect key="frame" x="125" y="385" width="124" height="18"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3jt-8w-5lh">
+                                <rect key="frame" x="130" y="440" width="114" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="Boo-yq-i1V"/>
+                                    <constraint firstAttribute="width" constant="114" id="Te3-9U-DXc"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                <state key="normal" title="S'inscrire"/>
+                                <connections>
+                                    <action selector="signUp:" destination="BYZ-38-t0r" eventType="touchUpInside" id="cyZ-Ge-AX0"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="SJh-dg-OXd" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="255" id="0Qp-rv-eC9"/>
                             <constraint firstItem="3jt-8w-5lh" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="114" id="4WR-I4-sSW"/>
+                            <constraint firstItem="3jt-8w-5lh" firstAttribute="top" secondItem="2Aw-x7-Epw" secondAttribute="bottom" constant="37" id="58a-22-fDO"/>
                             <constraint firstItem="CmS-R7-mhL" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="109" id="A31-1F-L2O"/>
+                            <constraint firstItem="2Aw-x7-Epw" firstAttribute="centerX" secondItem="3jt-8w-5lh" secondAttribute="centerX" id="PG6-d0-JHN"/>
                             <constraint firstAttribute="trailingMargin" secondItem="SJh-dg-OXd" secondAttribute="trailing" constant="79" id="RAp-KY-czJ"/>
                             <constraint firstItem="SJh-dg-OXd" firstAttribute="trailing" secondItem="wQ4-Kc-Ywe" secondAttribute="trailing" id="Uvl-hm-k7s"/>
                             <constraint firstItem="wQ4-Kc-Ywe" firstAttribute="top" secondItem="CmS-R7-mhL" secondAttribute="bottom" constant="40" id="dhd-YQ-pdm"/>
                             <constraint firstItem="SJh-dg-OXd" firstAttribute="top" secondItem="wQ4-Kc-Ywe" secondAttribute="bottom" constant="20" id="diE-hC-def"/>
+                            <constraint firstItem="2Aw-x7-Epw" firstAttribute="top" secondItem="mHf-MQ-e3Z" secondAttribute="bottom" constant="37" id="dye-eJ-jf2"/>
+                            <constraint firstItem="2Aw-x7-Epw" firstAttribute="leading" secondItem="CmS-R7-mhL" secondAttribute="leading" id="hvR-fg-sjI"/>
+                            <constraint firstItem="2Aw-x7-Epw" firstAttribute="centerX" secondItem="mHf-MQ-e3Z" secondAttribute="centerX" id="iuQ-rW-fcu"/>
                             <constraint firstItem="SJh-dg-OXd" firstAttribute="leading" secondItem="wQ4-Kc-Ywe" secondAttribute="leading" id="iwv-l7-dGJ"/>
-                            <constraint firstItem="3jt-8w-5lh" firstAttribute="top" secondItem="2Aw-x7-Epw" secondAttribute="bottom" constant="37" id="lUr-Ei-A4i"/>
-                            <constraint firstItem="2Aw-x7-Epw" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="109" id="nZ8-Yh-s1l"/>
                             <constraint firstItem="CmS-R7-mhL" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="127" id="plK-Xz-795"/>
-                            <constraint firstItem="2Aw-x7-Epw" firstAttribute="top" secondItem="SJh-dg-OXd" secondAttribute="bottom" constant="36" id="q8f-3a-qOS"/>
+                            <constraint firstAttribute="bottom" secondItem="2Aw-x7-Epw" secondAttribute="bottom" constant="264" id="ywz-BY-oiG"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="retour" id="ugv-yW-nVb"/>
                     <connections>
-                        <segue destination="psc-pi-8bN" kind="show" id="tKW-7q-kh8"/>
+                        <outlet property="loginTextField" destination="wQ4-Kc-Ywe" id="7sf-IY-SLF"/>
+                        <outlet property="passwordTextField" destination="SJh-dg-OXd" id="gWA-6w-9HI"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -273,7 +283,7 @@
         <!--Item-->
         <scene sceneID="rkY-pi-uPt">
             <objects>
-                <viewController id="psc-pi-8bN" customClass="ContactsVC" customModule="test" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="psc-pi-8bN" customClass="ContactsVC" customModule="CryptoMessage" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="z8H-6n-r2D"/>
                         <viewControllerLayoutGuide type="bottom" id="NSF-iF-kVs"/>
@@ -388,6 +398,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="tKW-7q-kh8"/>
+        <segue reference="Sn3-up-EUN"/>
     </inferredMetricsTieBreakers>
 </document>
