--- a/CryptoMessage/Base.lproj/Main.storyboard
+++ b/CryptoMessage/Base.lproj/Main.storyboard
@@ -74,6 +74,7 @@
                                 <state key="normal" title="S'inscrire"/>
                                 <connections>
                                     <action selector="signUp:" destination="BYZ-38-t0r" eventType="touchUpInside" id="cyZ-Ge-AX0"/>
+                                    <segue destination="BKO-EM-q2S" kind="show" identifier="ContactSegue" id="M5H-Yq-7UT"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -109,7 +110,7 @@
         <!--Title-->
         <scene sceneID="Ib0-he-M5m">
             <objects>
-                <viewController id="BKO-EM-q2S" sceneMemberID="viewController">
+                <viewController id="BKO-EM-q2S" customClass="SignUpVC" customModule="CryptoMessage" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="ejV-AQ-9sQ"/>
                         <viewControllerLayoutGuide type="bottom" id="aiS-HE-JgT"/>
@@ -163,15 +164,6 @@
                                 <color key="textColor" red="0.54053999352331605" green="0.54053999352331605" blue="0.54053999352331605" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dba-MY-3Aq">
-                                <rect key="frame" x="16" y="28" width="65" height="37"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="16"/>
-                                <state key="normal" title="Retour"/>
-                                <connections>
-                                    <segue destination="BYZ-38-t0r" kind="show" id="4On-EQ-dxD"/>
-                                </connections>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="00w-mO-1W1">
                                 <rect key="frame" x="152" y="373" width="70" height="34"/>
                                 <constraints>
@@ -183,6 +175,15 @@
                                     <segue destination="a2z-mo-yqq" kind="show" id="Rzy-Sh-pMS"/>
                                 </connections>
                             </button>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="HWT-B5-3P8">
+                                <rect key="frame" x="0.0" y="-30" width="375" height="74"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="Suscribe" prompt="&lt;" id="k9U-rN-Ihs">
+                                        <barButtonItem key="backBarButtonItem" title="&lt;" id="GM0-19-8xH"/>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -207,11 +208,11 @@
                             <constraint firstItem="FeF-hS-SNn" firstAttribute="top" secondItem="KJL-vw-17F" secondAttribute="bottom" constant="22" id="xg2-lu-NwB"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Title" id="ehR-yF-4Gh"/>
+                    <navigationItem key="navigationItem" title="Title" id="bId-uF-ldD"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qzP-oO-E2v" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="87" y="124"/>
+            <point key="canvasLocation" x="82" y="-639"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="Umt-ci-7fm">
@@ -296,10 +297,17 @@
                                 <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <items>
-                                    <navigationItem title="Contacts" id="BbK-UO-FxH"/>
+                                    <navigationItem title="Contacts" id="BbK-UO-FxH">
+                                        <barButtonItem key="leftBarButtonItem" title="Logout" style="done" id="4hU-xt-QIo">
+                                            <color key="tintColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <connections>
+                                                <action selector="logout:" destination="psc-pi-8bN" id="Keu-Fe-bCE"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
                                 </items>
                             </navigationBar>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="xN7-Ay-LYg">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" restorationIdentifier="1" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="xN7-Ay-LYg">
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -321,7 +329,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uUS-DE-XcT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1597.5999999999999" y="-848.72563718140941"/>
+            <point key="canvasLocation" x="1601" y="-951"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="YQK-ar-bft">
@@ -333,71 +341,17 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="WG2-3V-Tki" kind="relationship" relationship="viewControllers" id="hIK-ym-2Sb"/>
+                        <segue destination="psc-pi-8bN" kind="relationship" relationship="viewControllers" id="YWW-XB-XXN"/>
                         <segue destination="tBf-4h-B07" kind="relationship" relationship="viewControllers" id="yfr-8B-vhq"/>
                         <segue destination="DxY-cf-SRe" kind="relationship" relationship="viewControllers" id="iDp-dc-l4A"/>
-                        <segue destination="psc-pi-8bN" kind="relationship" relationship="viewControllers" id="YWW-XB-XXN"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RUz-Vo-vEw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="812" y="124"/>
         </scene>
-        <!--Table View Controller-->
-        <scene sceneID="5lb-Ey-7rW">
-            <objects>
-                <tableViewController id="WG2-3V-Tki" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="80" sectionHeaderHeight="28" sectionFooterHeight="28" id="ltW-6i-oM3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="ZNh-QY-FJx">
-                                <rect key="frame" x="0.0" y="28" width="375" height="80"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ZNh-QY-FJx" id="D6C-ag-WQx">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="79"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Guest #5520" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gNb-3U-BOd">
-                                            <rect key="frame" x="9" y="5" width="170" height="21"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <fontDescription key="fontDescription" type="system" weight="black" pointSize="15"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" usesAttributedText="YES" lineBreakMode="headTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mir-1M-dfa">
-                                            <rect key="frame" x="12" y="23" width="355" height="56"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <attributedString key="attributedText">
-                                                <fragment>
-                                                    <string key="content">For table views with a small number of rows, all rows may be onscreen at once, so this method gets called for each row in your table. But table views with a large number of rows display only a small fraction of their total items at a given time. </string>
-                                                    <attributes>
-                                                        <color key="NSColor" red="0.29803922770000002" green="0.29803922770000002" blue="0.29803922770000002" alpha="1" colorSpace="calibratedRGB"/>
-                                                        <font key="NSFont" size="13" name=".AppleSystemUIFont"/>
-                                                        <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="charWrapping" baseWritingDirection="leftToRight" lineHeightMultiple="1" tighteningFactorForTruncation="0.0" allowsDefaultTighteningForTruncation="NO"/>
-                                                    </attributes>
-                                                </fragment>
-                                            </attributedString>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                    </subviews>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="WG2-3V-Tki" id="D8Z-Ge-7JA"/>
-                            <outlet property="delegate" destination="WG2-3V-Tki" id="sHO-FP-jYv"/>
-                        </connections>
-                    </tableView>
-                    <tabBarItem key="tabBarItem" systemItem="bookmarks" id="i8T-nB-LHg"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Ujr-qc-vE7" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1597.5999999999999" y="-189.3553223388306"/>
-        </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="Sn3-up-EUN"/>
+        <segue reference="Rzy-Sh-pMS"/>
     </inferredMetricsTieBreakers>
 </document>
